# MyShell

./: .gitignore  CMakeLists.txt  README.md  Shell  Shell.c  controlC.c  entrada.txt  exec.h  functionsAux.h  help.c  readline.h  redirect.h  salida.txt  shell - Copy  shell.h  variables.h
